--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rubens</title>
+    <title>Portifolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header> <strong>Sobre Rubens</strong></header>
-    <main>
-        <h1>Eleve seu negócio digital a outro nível <strong>com um Front-end de qualidade!</strong></h1>
-
-        <p>Olá! Sou Rubens ferreira, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-
-        <a href="https://www.instagram.com/rubensferreiragoulart">Instagram</a>
-        <a href="https://github.com/rubens637">Github</a>
-        <img src="comunhão.jpg" alt="Foto Rubens e familia">
+<body>    
+    <header></header>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">
+                Eleve seu negócio digital a outro nível 
+                <strong class="titulo-destaque">com um Front-end de qualidade!
+                </strong></h1>
+                <p class="apresentacao__conteudo__texto">Olá! Sou Rubens ferreira, desenvolvedor 
+                Front-end com especialidade em React, HTML e
+                CSS. Ajudo pequenos negócios e designers a 
+                colocarem em prática boas ideias. Vamos 
+                conversar?</p>
+                <div class="apresentacao__links">
+                    <a class="apresentacao__links__link"  href="https://instagram.com/rubensferreiragoulart">Instagram</a>
+                    <a class="apresentacao__links__link"  href="https://github.com/Rubens637">GitHub</a>
+                </div>
+        </section>         
+                <img src="imagem.png" alt="Foto de um programador">          
     </main>
-    <footer>
-        <h1>Rubens Ferreira Goulart</h1>
-        <p>Cel 32-98819-6090</p>
-    </footer>
+    <footer></footer>
 </body>
 </html>
