--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
                 colocarem em prática boas ideias. Vamos 
                 conversar?</p>
                 <div class="apresentacao__links">
-                    <a class="apresentacao__links__link"  href="https://instagram.com/rubensferreiragoulart">Instagram</a>
-                    <a class="apresentacao__links__link"  href="https://github.com/Rubens637">GitHub</a>
+                    <h2 class="apresentacao__links_subtitulos">Acesse minhas redes:</h2>
+                    <a class="apresentacao__links__link"  href="https://instagram.com/rubensferreiragoulart">
+                        <img src="./assets/instagram.png">
+                        Instagram
+                    </a>
+                    <a class="apresentacao__links__link"  href="https://github.com/Rubens637">
+                        <img src="./assets/github.png">
+                        GitHub
+                    </a>
+                    <a class="apresentacao__links__link"  href="https://linkedin.com/in/rubensferreiragoulart">
+                        <img src="./assets/linkedin.png">
+                        Linkedin
+                    </a>
                 </div>
         </section>         
-                <img src="imagem.png" alt="Foto de um programador">          
+                <img src="./assets/Im.png" alt="Foto de um programador">          
     </main>
     <footer></footer>
 </body>
