--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         </section>         
                 <img src="./assets/Im.png" alt="Foto de um programador">          
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <P>Desenvolvido por Rubens</P>
+    </footer>
 </body>
 </html>
