--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>    
     <header class="cabecalho">
         <nav class="cabecalho__menu">        
-            <a class="cabecalho__menu__link">Home</a>
-            <a class="cabecalho__menu__link">Sobre Mim</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre Mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -41,7 +41,7 @@
                     </a>
                 </div>
         </section>         
-                <img src="./assets/Im.png" alt="Foto de um programador">          
+                <img src="./assets/Imagem.png" alt="Foto de um programador">          
     </main>
     <footer class="rodape">
         <P>Desenvolvido por Rubens</P>
