--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mim</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -14,7 +15,15 @@
         </nav>
     </header>
 
-    <main></main>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre Mim</h1>
+            <p class="apresentacao__conteudo__texto">Sou Rubens Ferreira Goulart, tenho 41anos, faço faculdade de sistema da informação desde Janeiro de 2024. Conheci Alura através do LinKdin já estou a um mês a perfeiçoando meu conhecimento. Vou me especializar em Front-end, Back-end e AI</p>
+            <p class="apresentacao__conteudo__texto">Nasci na cidade de Muriaé em 1982 dia 30 de dezembro, sou casado e teho uma filha. Eu e minha família gostamos de viajar e de conhecer lugares novos somos muitos unidos e sempre que podemos buscamos ficar sempre juntos curtindo cada momento. </p>
+
+        </section>
+        <img src="./assets/Imagem.png" alt="Foto de um progamador">
+    </main>
 
     <footer class="rodape">
         <P>Desenvolvido por Rubens</P>
