--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
                 conversar?</p>
                 <div class="apresentacao__links">
                     <h2 class="apresentacao__links_subtitulos">Acesse minhas redes:</h2>
-                    <a class="apresentacao__links__link"  href="https://instagram.com/rubensferreiragoulart">
+                    <a class="apresentacao__links__navegacao"  href="https://instagram.com/rubensferreiragoulart">
                         <img src="./assets/instagram.png">
                         Instagram
                     </a>
-                    <a class="apresentacao__links__link"  href="https://github.com/Rubens637">
+                    <a class="apresentacao__links__navegacao"  href="https://github.com/Rubens637">
                         <img src="./assets/github.png">
                         GitHub
                     </a>
-                    <a class="apresentacao__links__link"  href="https://linkedin.com/in/rubensferreiragoulart">
+                    <a class="apresentacao__links__navegacao"  href="https://linkedin.com/in/rubensferreiragoulart">
                         <img src="./assets/linkedin.png">
                         Linkedin
                     </a>
                 </div>
         </section>         
-                <img src="./assets/Imagem.png" alt="Foto de um programador">          
-    </main>
+                <img class="imagem" src="/assets/rubens.jpg"alt="foto da imagem"> 
+                </main>
     <footer class="rodape">
         <P>Desenvolvido por Rubens</P>
     </footer>
