--- a/about.html
+++ b/about.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Mim</title>
+    <title>Portifolio</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
+<body>    
     <header class="cabecalho">
         <nav class="cabecalho__menu">        
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre Mim</a>
         </nav>
     </header>
-
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Sobre Mim</h1>
-            <p class="apresentacao__conteudo__texto">Sou Rubens Ferreira Goulart, tenho 41anos, faço faculdade de sistema da informação desde Janeiro de 2024. Conheci Alura através do LinKdin já estou a um mês a perfeiçoando meu conhecimento. Vou me especializar em Front-end, Back-end e AI</p>
-            <p class="apresentacao__conteudo__texto">Nasci na cidade de Muriaé em 1982 dia 30 de dezembro, sou casado e teho uma filha. Eu e minha família gostamos de viajar e de conhecer lugares novos somos muitos unidos e sempre que podemos buscamos ficar sempre juntos curtindo cada momento. </p>
-
-        </section>
-        <img src="./assets/Imagem.png" alt="Foto de um progamador">
-    </main>
-
+            <h1 class="apresentacao__conteudo__titulo">
+                Eleve seu negócio digital a outro nível 
+                <strong class="titulo-destaque">com um Front-end de qualidade!
+                </strong></h1>
+                <p class="apresentacao__conteudo__texto">Olá! Sou Rubens ferreira, desenvolvedor 
+                Front-end com especialidade em React, HTML e
+                CSS. Ajudo pequenos negócios e designers a 
+                colocarem em prática boas ideias. Vamos 
+                conversar?</p>
+                <div class="apresentacao__links">
+                    <h2 class="apresentacao__links_subtitulos">Acesse minhas redes:</h2>
+                    <a class="apresentacao__links__navegacao"  href="https://instagram.com/rubensferreiragoulart">
+                        <img src="./assets/instagram.png">
+                        Instagram
+                    </a>
+                    <a class="apresentacao__links__navegacao"  href="https://github.com/Rubens637">
+                        <img src="./assets/github.png">
+                        GitHub
+                    </a>
+                    <a class="apresentacao__links__navegacao"  href="https://linkedin.com/in/rubensferreiragoulart">
+                        <img src="./assets/linkedin.png">
+                        Linkedin
+                    </a>
+                </div>
+        </section>         
+                <img class="imagem" src="/assets/rubens.jpg"alt="foto da imagem"> 
+                </main>
     <footer class="rodape">
         <P>Desenvolvido por Rubens</P>
     </footer>
