--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                         <img src="./assets/instagram.png">
                         Instagram
                     </a>
-                    <a class="apresentacao__links__navegacao"  href="https://github.com/Rubens637">
-                        <img src="./assets/github.png">
-                        GitHub
+                    <a class="apresentacao__links__navegacao"  href="https://www.facebook.com/rubens.ferreira.792">
+                        <img src="./assets/icons8-facebook-32.png">
+                        FaceBook
                     </a>
                     <a class="apresentacao__links__navegacao"  href="https://linkedin.com/in/rubensferreiragoulart">
                         <img src="./assets/linkedin.png">
