--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </a>
                 </div>
         </section>         
-                <img class="imagem" src="/assets/rubens.jpg"alt="foto da imagem"> 
+                <img src="/assets/Rub.png" alt="foto do rubens">
                 </main>
     <footer class="rodape">
         <P>Desenvolvido por Rubens</P>
