--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <p class="apresentacao__conteudo__texto">Nasci na cidade de Muriaé em 1982 dia 30 de dezembro, sou casado e teho uma filha. Eu e minha família gostamos de viajar e de conhecer lugares novos somos muitos unidos e sempre que podemos buscamos ficar sempre juntos curtindo cada momento. </p>
 
         </section>
-        <img class="imagem" src="./assets/rubens.jpg" alt="foto da imagem">
+        <img src="/assets/Rub.png" alt="foto do rubens">
     </main>
 
     <footer class="rodape">
